Make the lexer maven module a JPMS (must duplicate FakeErrorReporter because a "classic" maven test resource can not be exposed as a Java 9 module).